src/main/java/com/example/languagelearning/error/ApplicationException.java
package com.example.languagelearning.error;

public class ApplicationException extends RuntimeException {
    public ApplicationException(String message) {
        super(message);
    }
}
